syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package documentsManagement;

service DocumentsManagementService {
    rpc Create (CreateDocumentDto) returns (Document) {}

    rpc Update (UpdateDocumentDto) returns (google.protobuf.Empty) {}

    rpc UpdateFile (UpdateDocumentFileDto) returns (google.protobuf.Empty) {}

    rpc Delete (DeleteDocumentDto) returns (google.protobuf.Empty) {}

    rpc FindAllUrgentDocuments (FindAllDocumentsDto) returns (FindDocumentsResponse) {}

    rpc FindAllByAim (FindAllDocumentsByAimDto) returns (FindDocumentsResponse) {}

    rpc FindAllByStatus (FindAllDocumentsByStatusDto) returns (FindDocumentsResponse) {}

    rpc FindUserDocuments (FindUserDocumentsDto) returns (FindDocumentsResponse) {}

    rpc FindUserUrgentDocuments (FindUserUrgentDocumentsDto) returns (FindDocumentsResponse) {}

    rpc FindUserDocumentsByAim (FindUserDocumentsByAimDto) returns (FindDocumentsResponse) {}

    rpc FindUserDocumentsByStatus (FindUserDocumentsByStatusDto) returns (FindDocumentsResponse) {}

    rpc FindUserFavouriteDocuments (FindUserFavouriteDocumentsDto) returns (FindDocumentsResponse) {}

    rpc FindUserDeferredDocuments (FindUserDeferredDocumentsDto) returns (FindDocumentsResponse) {}
    
    rpc FindUserTemplates (FindUserTemplatesDto) returns (FindDocumentsResponse) {}

    rpc CreateComment (CreateCommentDto) returns (Comment) {}

    rpc FindDocumentComments (FindDocumentCommentsDto) returns (FindCommentsResponse) {}

    rpc UpdateComment (UpdateCommentDto) returns (google.protobuf.Empty) {}

    rpc DeleteComment (DeleteCommentDto) returns (google.protobuf.Empty) {}
}

message Document {
    string id = 1;

    string authorId = 2;

    string type = 3;

    string status = 4;

    string accessToken = 5;

    string currentVersion = 6;
}

message CreateDocumentDto {
    string authorId = 1;

    string type = 2;

    string status = 3;
}

message UpdateDocumentDto {
    google.protobuf.StringValue documentId = 1;

    google.protobuf.StringValue authorId = 2;

    google.protobuf.StringValue type = 3;

    google.protobuf.StringValue status = 4;
}

message UpdateDocumentFileDto {
    bytes documentId = 1;
    
    bytes file = 2;
}

message DeleteDocumentDto {
    string documentId = 1;
}

message FindDocumentsResponse {
    repeated Document documents = 1;
}

message FindAllDocumentsDto {
    string userId = 1;
}

message FindAllDocumentsByAimDto {
    string userId = 1;

    string aim = 2;
}

message FindAllDocumentsByStatusDto {
    string userId = 1;

    string status = 2;
}

message FindUserDocumentsDto {
    string userId = 1;
}

message FindUserUrgentDocumentsDto {
    string userId = 1;
}

message FindUserDocumentsByAimDto {
    string userId = 1;

    string aim = 2;
}

message FindUserDocumentsByStatusDto {
    string userId = 1;

    string status = 2;
}

message FindUserFavouriteDocumentsDto {
    string userId = 1;
}

message FindUserDeferredDocumentsDto {
    string userId = 1;
}

message FindUserTemplatesDto {
    string userId = 1;
}

message Comment {
    string id = 1;

    string value = 2;
}

message CreateCommentDto {
    string documentId = 1;

    string value = 2;
}

message FindCommentsResponse {
    repeated Comment comments = 1;
}

message FindDocumentCommentsDto {
    string documentId = 1;
}

message UpdateCommentDto {
    string commentId = 1;

    string value = 2;
}

message DeleteCommentDto {
    string commentId = 1;
}
