import {
    AUTHENTICATION_PACKAGE_NAME,
    AUTHENTICATION_SERVICE_NAME,
    DOCUMENTS_MANAGEMENT_PACKAGE_NAME,
    DOCUMENTS_MANAGEMENT_SERVICE_NAME,
    NOTIFICATIONS_PACKAGE_NAME,
    NOTIFICATIONS_SERVICE_NAME,
    ORGANIZATIONS_MANAGEMENT_PACKAGE_NAME,
    ORGANIZATIONS_MANAGEMENT_SERVICE_NAME,
    USERS_MANAGEMENT_PACKAGE_NAME,
    USERS_MANAGEMENT_SERVICE_NAME,
    WORKFLOWS_MANAGEMENT_PACKAGE_NAME,
    WORKFLOWS_MANAGEMENT_SERVICE_NAME
} from "../generated";

export const GrpcInfo = {
    authorization: {
        SERVICE_NAME: AUTHENTICATION_SERVICE_NAME,
        PACKAGE_NAME: AUTHENTICATION_PACKAGE_NAME
    },
    documents_management: {
        SERVICE_NAME: DOCUMENTS_MANAGEMENT_SERVICE_NAME,
        PACKAGE_NAME: DOCUMENTS_MANAGEMENT_PACKAGE_NAME
    },
    notofications: {
        SERVICE_NAME: NOTIFICATIONS_SERVICE_NAME,
        PACKAGE_NAME: NOTIFICATIONS_PACKAGE_NAME
    },
    organizations_management: {
        SERVICE_NAME: ORGANIZATIONS_MANAGEMENT_SERVICE_NAME,
        PACKAGE_NAME: ORGANIZATIONS_MANAGEMENT_PACKAGE_NAME
    },
    users_management: {
        SERVICE_NAME: USERS_MANAGEMENT_SERVICE_NAME,
        PACKAGE_NAME: USERS_MANAGEMENT_PACKAGE_NAME
    },
    workflows_management: {
        SERVICE_NAME: WORKFLOWS_MANAGEMENT_SERVICE_NAME,
        PACKAGE_NAME: WORKFLOWS_MANAGEMENT_PACKAGE_NAME
    }
};
